<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:src="@drawable/cmu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/source_code_pro_bold"
        android:text="@string/school"
        android:textColor="@color/colorDark"
        android:textSize="28sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/source_code_pro_bold"
        android:text="@string/uni"
        android:textColor="@color/colorDark"
        android:textSize="28sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/source_code_pro_bold"
        android:text="@string/vote"
        android:textColor="@color/colorDark"
        android:textSize="30sp"></TextView>
    </LinearLayout>
